# ai-tell-mock

./: .gitignore  CLAUDE.md  README.md  claude_desktop_config.json  pyproject.toml  report.md
generated-dags/: .gitkeep
langgraph-server/: agent.py  requirements.txt
mcp-servers/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
mcp-servers/mock-data/datahub/lineage/: lineage-graph.json
mcp-servers/mock-data/datahub/tables/: iptv.tb_stb_5min_qual.json  iptv.tb_stb_quality_daily_dist.json
mcp-servers/mock-data/responses/: error-templates.json
src/ai_tell_mook/: crew.py  main.py
uizen-integration/: README.md
uizen-integration/api-route/chat/: route.ts
uizen-integration/api-route/chat/[threadId]/: route.ts
uizen-integration/api-route/chat/[threadId]/messages/: route.ts
uizen-integration/api-route/chat/threads/: route.ts
uizen-integration/hooks/: useChat.ts
